--- a/FranksDinerBlazor/Client/Shared/NavMenu.razor
+++ b/FranksDinerBlazor/Client/Shared/NavMenu.razor
@@ -12,12 +12,32 @@
     <nav class="flex-column">
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
+                <span class="oi oi-home" aria-hidden="true"></span>Home
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="fetchorderdetails">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Order Details
+                <span class="oi oi-list-rich" aria-hidden="true"></span>All Orders
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="fetchorderdetails/pending">
+                <span class="oi oi-question-mark" aria-hidden="true"></span>Pending Confirmation
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="fetchorderdetails/confirmed">
+                <span class="oi oi-credit-card" aria-hidden="true"></span>Pending Payment
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="fetchorderdetails/paid">
+                <span class="oi oi-check" aria-hidden="true"></span>Payment Confirmed
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="fetchorderdetails/rejected">
+                <span class="oi oi-x" aria-hidden="true"></span>Order Rejected
             </NavLink>
         </div>
     </nav>
